services: designrequests: Add drid sequential field
